--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,15 +5,115 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:padding="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        tools:layout_editor_absoluteX="1dp">
 
+        <androidx.gridlayout.widget.GridLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/black"
+            android:backgroundTint="@color/material_dynamic_neutral0"
+            app:columnCount="3"
+            app:rowCount="3">
+
+            <Button
+                android:id="@+id/activity_main_button00"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_margin="2dp"
+                android:background="@color/material_dynamic_neutral0"
+                android:backgroundTint="@color/black"
+                android:text=""
+                app:backgroundTint="@color/white" />
+
+            <Button
+                android:id="@+id/activity_main_button01"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_margin="2dp"
+                android:background="@color/material_dynamic_neutral80"
+                android:text=""
+                app:backgroundTint="@color/white"/>
+
+            <Button
+                android:id="@+id/activity_main_button02"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_margin="2dp"
+                android:background="@color/material_dynamic_neutral80"
+                android:text=""
+                app:backgroundTint="@color/white"/>
+
+            <Button
+                android:id="@+id/activity_main_button10"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_margin="2dp"
+                android:background="@color/material_dynamic_neutral80"
+                android:text=""
+                app:backgroundTint="@color/white"/>
+
+            <Button
+                android:id="@+id/activity_main_button11"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_margin="2dp"
+                android:background="@color/material_dynamic_neutral80"
+                android:text=""
+                app:backgroundTint="@color/white"/>
+
+            <Button
+                android:id="@+id/activity_main_button12"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_margin="2dp"
+                android:background="@color/material_dynamic_neutral80"
+                android:text=""
+                app:backgroundTint="@color/white"/>
+
+            <Button
+                android:id="@+id/activity_main_button20"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_margin="2dp"
+                android:background="@color/material_dynamic_neutral80"
+                android:text=""
+                app:backgroundTint="@color/white"/>
+
+            <Button
+                android:id="@+id/activity_main_button21"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_margin="2dp"
+                android:background="@color/material_dynamic_neutral80"
+                android:text=""
+                app:backgroundTint="@color/white"/>
+
+            <Button
+                android:id="@+id/activity_main_button22"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_margin="2dp"
+                android:background="@color/material_dynamic_neutral80"
+                android:text=""
+                app:backgroundTint="@color/white"/>
+        </androidx.gridlayout.widget.GridLayout>
+
+        <TextView
+            android:id="@+id/activity_main_text_player_turn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:padding="16dp" />
+
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
