--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,6 +33,8 @@
                 android:background="@color/material_dynamic_neutral0"
                 android:backgroundTint="@color/black"
                 android:text=""
+                android:textSize="24sp"
+                android:textColor="@color/black"
                 app:backgroundTint="@color/white" />
 
             <Button
@@ -42,6 +44,8 @@
                 android:layout_margin="2dp"
                 android:background="@color/material_dynamic_neutral80"
                 android:text=""
+                android:textSize="24sp"
+                android:textColor="@color/black"
                 app:backgroundTint="@color/white"/>
 
             <Button
@@ -51,6 +55,8 @@
                 android:layout_margin="2dp"
                 android:background="@color/material_dynamic_neutral80"
                 android:text=""
+                android:textSize="24sp"
+                android:textColor="@color/black"
                 app:backgroundTint="@color/white"/>
 
             <Button
@@ -60,6 +66,8 @@
                 android:layout_margin="2dp"
                 android:background="@color/material_dynamic_neutral80"
                 android:text=""
+                android:textSize="24sp"
+                android:textColor="@color/black"
                 app:backgroundTint="@color/white"/>
 
             <Button
@@ -69,6 +77,8 @@
                 android:layout_margin="2dp"
                 android:background="@color/material_dynamic_neutral80"
                 android:text=""
+                android:textSize="24sp"
+                android:textColor="@color/black"
                 app:backgroundTint="@color/white"/>
 
             <Button
@@ -78,6 +88,8 @@
                 android:layout_margin="2dp"
                 android:background="@color/material_dynamic_neutral80"
                 android:text=""
+                android:textSize="24sp"
+                android:textColor="@color/black"
                 app:backgroundTint="@color/white"/>
 
             <Button
@@ -87,6 +99,8 @@
                 android:layout_margin="2dp"
                 android:background="@color/material_dynamic_neutral80"
                 android:text=""
+                android:textSize="24sp"
+                android:textColor="@color/black"
                 app:backgroundTint="@color/white"/>
 
             <Button
@@ -96,6 +110,8 @@
                 android:layout_margin="2dp"
                 android:background="@color/material_dynamic_neutral80"
                 android:text=""
+                android:textSize="24sp"
+                android:textColor="@color/black"
                 app:backgroundTint="@color/white"/>
 
             <Button
@@ -105,6 +121,8 @@
                 android:layout_margin="2dp"
                 android:background="@color/material_dynamic_neutral80"
                 android:text=""
+                android:textSize="24sp"
+                android:textColor="@color/black"
                 app:backgroundTint="@color/white"/>
         </androidx.gridlayout.widget.GridLayout>
 
@@ -113,7 +131,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:padding="16dp" />
+            android:padding="16dp"
+            android:textColor="@color/black"
+            />
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
